--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./js/1-gallery.js" type="module"></script>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-    <ul>
-         <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
-    </ul>
-      
+    <ul class="gallery"></ul>
 </body>
+
 </html>
