--- a/src/2-form.html
+++ b/src/2-form.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="./js/2-form.js" type="module"></script>
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
